# the-turtle

./: .gitignore  Cargo.toml  README.md
Ableton_Live-tests Project/: Ableton_Live-tests.als
Ableton_Live-tests Project/Samples/Recorded/: 2-Audio 0001 [2026-07-11 071222].aif  2-Audio 0001 [2026-07-11 071222].aif.asd  2-Audio 0001 [2026-07-11 071226].aif  2-Audio 0001 [2026-07-11 071226].aif.asd  2-Audio 0002 [2026-07-11 073022].aif  2-Audio 0002 [2026-07-11 073022].aif.asd  2-Audio 0003 [2026-07-11 073054].aif  2-Audio 0003 [2026-07-11 073054].aif.asd  2-Audio 0005 [2026-07-11 073825].aif  2-Audio 0005 [2026-07-11 073825].aif.asd  2-Audio 0006 [2026-07-11 074116].aif.asd  2-Audio 0007 [2026-07-11 080512].aif  2-Audio 0007 [2026-07-11 080512].aif.asd  2-Audio 0008 [2026-07-11 082024].aif  2-Audio 0008 [2026-07-11 082024].aif.asd
crates/turtle-cli/: Cargo.toml
crates/turtle-cli/src/: client.rs  gen.rs  main.rs
crates/turtle-core/: Cargo.toml
crates/turtle-core/src/: error.rs  lib.rs  model.rs  proto.rs  timeline.rs  timing.rs  transport.rs
crates/turtle-dsp/: Cargo.toml
crates/turtle-dsp/src/: biquad.rs  delay.rs  gain.rs  lib.rs  limiter.rs  util.rs
crates/turtled/: Cargo.toml
crates/turtled/src/: alsa_backend.rs  backend.rs  clock.rs  control.rs  control_map.rs  engine.rs  main.rs  mixer.rs  notes.rs  play.rs  rt.rs  scheduler.rs  socket.rs  stems.rs
docs/: pi-setup.md  turtle-spec.md
tools/converter/: pyproject.toml
tools/converter/src/turtle_convert/: __init__.py  als.py  audio.py  bundle.py  cli.py  ir.py  midi_export.py  timebase.py  validate.py
tools/converter/tests/: conftest.py  fixtures.py  test_als.py  test_audio.py  test_bundle.py  test_cli.py  test_midi_export.py  test_timebase.py
