[workspace]
resolver = "2"
members = [
    "crates/turtle-core",
    "crates/turtle-dsp",
    "crates/turtled",
    "crates/turtle-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "1"
turtle-core = { path = "crates/turtle-core" }
turtle-dsp = { path = "crates/turtle-dsp" }
