[package]
name = "turtle-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Data model, bundle load/validate, and sample-time math for the Turtle show player."

[dependencies]
serde = { workspace = true }
# JSON for the control-socket line protocol (§10, `proto`).
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
midly = "0.5"
