[package]
name = "turtled"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "The Turtle daemon: audio RT + MIDI scheduler + control threads (spec §3)."

[dependencies]
turtle-core = { workspace = true }
turtle-dsp = { workspace = true }
rtrb = "0.3"
# WAV stem decoding (§4). Pure Rust, no C deps — builds/tests on the dev Mac too.
hound = "3"
thiserror = { workspace = true }

# ALSA is Linux-only (`libasound`). Gating the dep to Linux targets keeps the
# host-independent core building + testing on the dev Mac; the `alsa` crate is
# only compiled when building for the Pi. See `src/alsa_backend.rs`.
[target.'cfg(target_os = "linux")'.dependencies]
alsa = "0.9"

[dev-dependencies]
midly = "0.5"
