[project]
name = "turtle-convert"
version = "0.1.0"
description = "Ableton Live project -> Turtle show bundle converter (spec §11)."
requires-python = ">=3.11"
dependencies = [
    "lxml>=5",
    "mido>=1.3",
    "numpy>=1.26",
    "soundfile>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
turtle-convert = "turtle_convert.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
